--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,60 @@
-.App {
+body { 
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.header, article, main {
+  margin: 0 auto;
+  max-width: 94%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+  font-size: 3rem;
+  line-height: 6rem;
 }
 
-.App-link {
-  color: #61dafb;
+.github-profile {
+  float: left; 
+  margin: 1rem .5rem;
+  width: 90%;
+  border: 1px dotted #444;
+  padding: 1rem; 
+   text-align: left;
+
+}
+.github-profile img {
+  float: left;
+ margin: 5px 15px 15px 0;
+ max-width: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.github-profile .name {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+form {
+  border: 1px solid #bbb;
+  margin: 10px auto;
+  max-width: 80%;
+  padding: 2rem;
+  background: #efefef;
+}
+input, button {
+  line-height: 1.5rem;
+   padding: 5px;
+   font-size: 1.2rem;
+   border-radius: 6px;
+   margin: 0 2px;
+}
+
+button {
+  background: #0b0;
+  color: #eee;
+  border: 2px solid #0b0;  
+}
+
+button:hover {
+  border: 2px solid #0a0;
+  background: #0a0;
+  cursor: pointer;
 }
